[workspace]
members = [
    "./abs",
    "./count_if",
    "./display_file",
    "./div_mod",
    "./foreach",
    "./is_negative",
    "./iterative_factorial",
    "./point",
    "./print_alphabet",
    "./print_numbers",
    "./print_params",
    "./put_str",
    "./range",
    "./recursive_factorial",
    "./set_mutable",
    "./sort_params",
    "./sqrt",
    "./str_cmp",
    "./strdup",
    "./str_len",
    "./swap",
]
